--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "start": "nodemon ./server.js"
   },
   "dependencies": {
+    "@fastify/jwt": "^6.3.2",
     "@prisma/client": "^4.4.0",
+    "bcryptjs": "^2.4.3",
     "fastify": "^4.8.1",
+    "fastify-auth": "^1.2.0",
     "fastify-plugin": "^4.2.1",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mercurius": "^11.0.1"
   },
   "devDependencies": {
