--- a/package.json
+++ b/package.json
@@ -1,19 +1,37 @@
 {
+  "name": "template-fastify-graphql-rest-prisma",
+  "version": "1.0.0",
+  "author": "Stephan Du Toit",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "nodemon ./server.js",
     "start": "nodemon ./server.js"
   },
   "dependencies": {
+    "@fastify/autoload": "^5.4.1",
+    "@fastify/caching": "8.0.1",
+    "@fastify/cors": "^8.1.0",
+    "@fastify/env": "^4.1.0",
     "@fastify/jwt": "^6.3.2",
+    "@fastify/redis": "6.0.1",
+    "@fastify/sensible": "^5.1.1",
+    "@fastify/swagger": "^8.0.0",
+    "@fastify/swagger-ui": "^1.0.3",
     "@prisma/client": "^4.4.0",
+    "abstract-cache-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "desm": "^1.3.0",
     "fastify": "^4.8.1",
     "fastify-auth": "^1.2.0",
-    "fastify-plugin": "^4.2.1",
+    "fastify-plugin": "^4.3.0",
+    "fastify-print-routes": "^2.0.6",
+    "fluent-json-schema": "^4.0.0",
     "graphql": "^16.6.0",
+    "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
-    "mercurius": "^11.0.1"
+    "mercurius": "^11.0.1",
+    "mercurius-cache": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
