--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./server.js",
+    "test": "jest",
     "start": "nodemon ./server.js"
   },
   "dependencies": {
@@ -34,6 +35,12 @@
     "mercurius-cache": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/preset-env": "^7.19.4",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "pino-colada": "^2.2.2",
     "pino-pretty": "^9.1.1"
