--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./server.js",
-    "test": "jest",
+    "test": "tap",
     "start": "nodemon ./server.js"
   },
   "dependencies": {
@@ -18,12 +18,12 @@
     "@fastify/redis": "6.0.1",
     "@fastify/sensible": "^5.1.1",
     "@fastify/swagger": "^8.0.0",
-    "@fastify/swagger-ui": "^1.0.3",
-    "@prisma/client": "^4.4.0",
+    "@fastify/swagger-ui": "^1.1.0",
+    "@prisma/client": "^4.5.0",
     "abstract-cache-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "desm": "^1.3.0",
-    "fastify": "^4.8.1",
+    "fastify": "^4.9.2",
     "fastify-auth": "^1.2.0",
     "fastify-plugin": "^4.3.0",
     "fastify-print-routes": "^2.0.6",
@@ -32,7 +32,7 @@
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mercurius": "^11.0.1",
-    "mercurius-cache": "^3.0.0"
+    "mercurius-cache": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -43,6 +43,8 @@
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "pino-colada": "^2.2.2",
-    "pino-pretty": "^9.1.1"
+    "pino-pretty": "^9.1.1",
+    "supertest": "^6.3.0",
+    "tap": "^16.3.0"
   }
 }
