--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,8 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm test
+        env:
+          NODE_ENV: ${{secrets.NODE_ENV}}
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
+          JWT_SECRET: ${{secrets.JWT_SECRET}}
       - run: npm run build --if-present
