--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^1.1.0",
     "@prisma/client": "^4.5.0",
+    "abstract-cache": "^1.0.1",
     "abstract-cache-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "desm": "^1.3.0",
