--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "desm": "^1.3.0",
     "fastify": "^4.9.2",
     "fastify-auth": "^1.2.0",
+    "fastify-guard": "^2.0.0",
     "fastify-plugin": "^4.3.0",
     "fastify-print-routes": "^2.0.6",
     "fluent-json-schema": "^4.0.0",
@@ -45,7 +46,8 @@
     "nodemon": "^2.0.20",
     "pino-colada": "^2.2.2",
     "pino-pretty": "^9.1.1",
+    "prisma": "^4.16.1",
     "supertest": "^6.3.0",
-    "tap": "^16.3.0"
+    "tap": "^16.3.7"
   }
 }
