Postgresql implementation complete

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,9 @@ REDIS_URL="localhost"
 REDIS_PORT="6379"
 REDIS_USERNAME=""
 REDIS_PASSWORD=""
+POSTGRES_PRISMA_URL="postgres://postgres:postgrespw@localhost:5432/sampledb?schema=public"
+POSTGRES_URL_NON_POOLING="postgres://postgres:postgrespw@localhost:5432/nextjs13_geojson?schema=public"
+GRAPHQLCLIENT=true
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgrespw
+DATABASE_NAME=testdb
