mongo module added

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,8 +39,10 @@ jobs:
       - run: npx prisma generate
       - name: Check MongoDB connection
         run: |
+          cho "Installing mongodb package..."
+          npm install mongodb
           echo "Checking MongoDB connection..."
-          node -e "const { MongoClient } = require('mongodb'); MongoClient.connect(process.env.DATABASE_URL, (err, client) => { if (err) { console.error('Failed to connect to MongoDB:', err); process.exit(1); } else { console.log('Connected to MongoDB successfully!'); client.close(); } });"
+          node -e "const { MongoClient } = require('mongodb'); MongoClient.connect(process.env.DATABASE_URL, { useUnifiedTopology: true }, (err, client) => { if (err) { console.error('Failed to connect to MongoDB:', err); process.exit(1); } else { console.log('Connected to MongoDB successfully!'); client.close(); } });"
       - run: npm test
         env:
           NODE_ENV: ${{secrets.NODE_ENV}}
