--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,18 +38,18 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
 
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.8.0
-        with:
-          mongodb-version: ${{ matrix.mongodb-version }}
-          mongodb-replica-set: "rs0"
+      # - name: Start MongoDB
+      #   uses: supercharge/mongodb-github-action@1.8.0
+      #   with:
+      #     mongodb-version: ${{ matrix.mongodb-version }}
+      #     mongodb-replica-set: "rs0"
 
       - run: npm ci
       - run: npx prisma generate
       - run: npm test
         env:
           NODE_ENV: ${{secrets.NODE_ENV}}
-          DATABASE_URL: ${{secrets.DATABASE_URL_LOCAL}}
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
           JWT_SECRET: ${{secrets.JWT_SECRET}}
           REDIS_URL: ${{secrets.REDIS_URL}}
           REDIS_PORT: ${{secrets.REDIS_PORT}}
