--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon ./server.js",
-    "test": "tap",
+    "test": "mocha",
     "start": "nodemon ./server.js"
   },
   "dependencies": {
