--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-env": "^7.19.4",
     "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
     "pino-colada": "^2.2.2",
     "pino-pretty": "^9.1.1",
