--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "abstract-cache": "^1.0.1",
     "abstract-cache-redis": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "^5.3.0",
     "desm": "^1.3.0",
     "fastify": "^4.9.2",
     "fastify-auth": "^1.2.0",
