--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "start": "nodemon ./server.js"
   },
   "dependencies": {
+    "@fastify/auth": "^4.3.0",
     "@fastify/autoload": "^5.4.1",
     "@fastify/caching": "8.0.1",
     "@fastify/cors": "^8.1.0",
     "@fastify/env": "^4.1.0",
     "@fastify/jwt": "^6.3.2",
+    "@fastify/passport": "^2.3.0",
     "@fastify/redis": "6.0.1",
+    "@fastify/secure-session": "^6.2.0",
     "@fastify/sensible": "^5.1.1",
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^1.1.0",
@@ -27,6 +30,7 @@
     "desm": "^1.3.0",
     "fastify": "^4.9.2",
     "fastify-auth": "^1.2.0",
+    "fastify-cors": "^6.1.0",
     "fastify-guard": "^2.0.0",
     "fastify-plugin": "^4.3.0",
     "fastify-print-routes": "^2.0.6",
@@ -35,7 +39,9 @@
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mercurius": "^11.0.1",
-    "mercurius-cache": "^3.0.1"
+    "mercurius-auth": "^4.0.0",
+    "mercurius-cache": "^3.0.1",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
